
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ is_bigendian () ;

int reverseInt(unsigned int i)
 {
    unsigned char c1, c2, c3, c4;

    if (is_bigendian())
    {
       return i;
    }else{
          c1=i&255;
          c2=(i>>8)&255;
          c3=(i>>16)&255;
          c4=(i>>24)&255;
    return ((int)c1<<24)+((int)c2<<16)+((int)c3<<8)+c4;
        }
 }
